Fixed an animation jumping issue in Chrome.

--- a/selectioner.css
+++ b/selectioner.css
@@ -107,6 +107,11 @@
 	-ms-transition: all 0.15s linear;
     -o-transition: all 0.15s linear;
     transition: all 0.15s linear;
+	
+	-moz-transform:rotateX(-360deg);
+    -webkit-transform:rotateX(-360deg);
+    -o-transform:rotateX(-360deg);
+    transform:rotateX(-360deg);
 }
 
 .select-display.select-visible .select-button
@@ -116,10 +121,10 @@
 
 .select-display.select-visible .select-button:not(ie8)
 {
-	-moz-transform:rotate(-180deg);
-    -webkit-transform:rotate(-180deg);
-    -o-transform:rotate(-180deg);
-    transform:rotate(-180deg);
+	-moz-transform:rotateX(-180deg);
+    -webkit-transform:rotateX(-180deg);
+    -o-transform:rotateX(-180deg);
+    transform:rotateX(-180deg);
 	background-position: 0px 0px;
 }
 
